Adicionando linhas de separação

--- a/index.html
+++ b/index.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
 </head>
+
 <body>
     <h1>Sthéfani Ferreira Martinelli</h1>
-    <img id="foto-pessoal" src="IMG_1092-5.jpg" width="400px" alt="Foto pessoal de uma mulher branca com cabelos e olhos castanhos">
-    <h2>Descrição</h2>
+    <img id="foto-pessoal" src="IMG_1092-5.jpg" width="400px"
+        alt="Foto pessoal de uma mulher branca com cabelos e olhos castanhos">
+    <h3>Descrição</h3>
     <p>Nascida em Paragominas - PA em 1993, hoje moro em Minas Gerais, na cidade de Bom Despacho. <br><br>
-    
-        Me formei em Engenharia Mecânica, pela Universidade Federal de Minas Gerais, em 2016.<br><br>
-        
-        Durante a faculdade, alguns pontos importantes foram:
-        <li>2012: Realizei um intercâmbio de três meses na cidade de Brighton, Inglaterra, para consolidação do idioma inglês;</li>
-        <li>2013 - 2014: Participei da equipe de competição de aeromodelismo, e estive presente em duas competições nacionais da SAE Aero Design, sendo a responsável pela apresentação de projeto;
-        <li>2015: Participei do programa Ciência sem Fronteiras, onde cursei dois semestres do curso de Engenharia Mecânica na Queensland University of Technology, em Brisbane Austrália.</li>    
+        <hr>
+    <h3>Educação</h3>
+    Me formei em Engenharia Mecânica, pela Universidade Federal de Minas Gerais, em 2016.<br><br>
+
+    Durante a faculdade, alguns pontos importantes foram:
+    <li>2012: Realizei um intercâmbio de três meses na cidade de Brighton, Inglaterra, para consolidação do idioma
+        inglês;</li>
+    <li>2013 - 2014: Participei da equipe de competição de aeromodelismo, e estive presente em duas competições
+        nacionais da SAE Aero Design, sendo a responsável pela apresentação de projeto;
+    <li>2015: Participei do programa Ciência sem Fronteiras, onde cursei dois semestres do curso de Engenharia Mecânica
+        na Queensland University of Technology, em Brisbane Austrália.</li>
     </p>
+    <hr>
     <h3>Experiências profissionais</h3>
-    <p><strong>Abr. 2019 - Dias atuais: Máli Máli Proprietária e Estilista</strong> <em>(<a href="https://www.malimali.com.br/" target="_blank">Site Máli Máli</a>)</em><br>
-        Principais atividades: Planejamento e criação de coleções mais sustentáveis, dentro do segmento de moda feminina. Faço também toda a organização financeira, atendimento ao cliente e planejamento de marketing da empresa.
+    <p><strong>Abr. 2019 - Dias atuais: Máli Máli Proprietária e Estilista</strong> <em>(<a
+                href="https://www.malimali.com.br/" target="_blank">Site Máli Máli</a>)</em><br>
+        Principais atividades: Planejamento e criação de coleções mais sustentáveis, dentro do segmento de moda
+        feminina. Faço também toda a organização financeira, atendimento ao cliente e planejamento de marketing da
+        empresa.
         <br><br>
         <strong>Jun. 2018 – Nov. 2018: Falconi Consultores de Resultado: Analista de Gestão</strong><br>
-        Principais atividades: Atuação em projeto em que foi aplicado o Gerenciamento da Rotina. Responsável pelo desenvolvimento de Procedimentos Padrão para área comercial e por acompanhar a equipe em campo para validar e auxiliar no treinamento dos padrões. Atuação no treinamento teórico do método PDCA, ministrado aos times comerciais. Responsável pelo desdobramento do plano de ação de uma das frentes do projeto, tendo realizado o acompanhamento junto à equipe do cliente para que fosse corretamente implementado. 
+        Principais atividades: Atuação em projeto em que foi aplicado o Gerenciamento da Rotina. Responsável pelo
+        desenvolvimento de Procedimentos Padrão para área comercial e por acompanhar a equipe em campo para validar e
+        auxiliar no treinamento dos padrões. Atuação no treinamento teórico do método PDCA, ministrado aos times
+        comerciais. Responsável pelo desdobramento do plano de ação de uma das frentes do projeto, tendo realizado o
+        acompanhamento junto à equipe do cliente para que fosse corretamente implementado.
         <br><br>
-        <strong>Mai. 2017 – Mar. 2018: Stone Pagamentos: Analista de Risco nas áreas de Cadastro e Risco de Produtos</strong><br>
-        Principais atividades: Responsável pelo acompanhamento, definição de novos fluxos e resolução de problemas de clientes com alto faturamento, redes de franquias, holdings, grupos econômicos. Encarregada de realizar estudos de segmentos do mercado, análise de dados internos e dados de clientes com portfólios atípicos e arriscados, a fim de definir políticas de risco para a companhia. Responsável por definir premissas para a entrada de clientes de portfólios como: marketplace, suplementos alimentícios, armas de fogo, apps, criptomoedas, entre outros, atuando juntamente com os times Comercial, Novos Produtos, Regulamentações das Bandeiras, Compliance e Logística
+        <strong>Mai. 2017 – Mar. 2018: Stone Pagamentos: Analista de Risco nas áreas de Cadastro e Risco de
+            Produtos</strong><br>
+        Principais atividades: Responsável pelo acompanhamento, definição de novos fluxos e resolução de problemas de
+        clientes com alto faturamento, redes de franquias, holdings, grupos econômicos. Encarregada de realizar estudos
+        de segmentos do mercado, análise de dados internos e dados de clientes com portfólios atípicos e arriscados, a
+        fim de definir políticas de risco para a companhia. Responsável por definir premissas para a entrada de clientes
+        de portfólios como: marketplace, suplementos alimentícios, armas de fogo, apps, criptomoedas, entre outros,
+        atuando juntamente com os times Comercial, Novos Produtos, Regulamentações das Bandeiras, Compliance e Logística
     </p>
-        <h2>Habilidades</h2>
-        <ul>
-            <li>Proatividade</li>
-            <li>Curiosidade em aprender</li>
-            <li>Comunicação assertiva</li>
-            <li>Fluente em língua inglesa</li>
-        </ul>
+    <hr>
+    <h2>Habilidades</h2>
+    <ul>
+        <li>Proatividade</li>
+        <li>Curiosidade em aprender</li>
+        <li>Comunicação assertiva</li>
+        <li>Fluente em língua inglesa</li>
+    </ul>
     <p><strong><a href=#foto-pessoal>LINK PARA FOTO</a><strong></p>
 
 </body>
+
 </html>
