Alteração do parágrafo máli máli

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p><strong>Abr. 2019 - Dias atuais: Máli Máli Proprietária e Estilista</strong> <em>(<a
                 href="https://www.malimali.com.br/" target="_blank">Site Máli Máli</a>)</em><br>
         Principais atividades: Planejamento e criação de coleções mais sustentáveis, dentro do segmento de moda
-        feminina. Faço também toda a organização financeira, atendimento ao cliente e planejamento de marketing da
+        feminina. Responsável também pela organização financeira, atendimento ao cliente e planejamento de marketing da
         empresa.
         <br><br>
         <strong>Jun. 2018 – Nov. 2018: Falconi Consultores de Resultado: Analista de Gestão</strong><br>
