Alteração das cores de background e estilo das fontes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <style>
+
+        h3 {
+            color: white;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-size: 20px;
+        }
+
+        h1 {
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+
+        body {
+            background-color: rgb(176, 191, 151);
+            color: white;
+            font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        
+        .principal-1 {
+            font-size: 30px;
+        }
+        .principal-2 {
+            font-size: 25px ;
+        }
+        .principal-3 {
+            font-size: 20px;
+        }
+        .principal-4 {
+            font-size: 15px;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -52,11 +84,11 @@
     </p>
     <hr>
     <h3>Habilidades</h3>
-    <ul>
-        <li>Proatividade</li>
-        <li>Curiosidade em aprender</li>
-        <li>Comunicação assertiva</li>
-        <li>Fluente em língua inglesa</li>
+    <ul class="list-style">
+        <li class="principal-1">Proatividade</li>
+        <li class="principal-2">Curiosidade em aprender</li>
+        <li class="principal-3">Comunicação assertiva</li>
+        <li class="principal-4">Fluente em língua inglesa</li>
     </ul>
     <p><strong><a href=#foto-pessoal>LINK PARA FOTO</a><strong></p>
 
